# cute

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  cute.h
cmake/: properties.cmake
include/: cute.h
test/: CMakeLists.txt  cute.c
